<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/dayPlanFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/dayplanicon"
        android:title="@string/day_plan" />
    <item
        android:id="@+id/notesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/noteicon"
        android:title="@string/notes" />
    <item
        android:id="@+id/meditationFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/meditation"
        android:title="@string/meditation" />
    <item
        android:id="@+id/settingsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/settingsicon"
        android:title="@string/settings" />
</menu>