<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/password_rounded_shape">

 <ImageView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:src="@drawable/ic_bottom_sheet_graple"/>

 <Button
     android:id="@+id/btn_addAppointment"
     android:layout_width="match_parent"
     android:backgroundTint="#006A67"
     android:text="@string/add_date"
     android:textColor="@color/white"
     android:layout_height="wrap_content"
     android:layout_marginEnd="120dp"
     android:layout_marginStart="120dp"
     android:layout_marginTop="25dp"
     android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/tv_date"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_title"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meeting_description"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:hint="@string/additional_description"/>

    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:headerBackground="@color/black"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:timePickerMode="spinner"
        android:visibility="gone"
        android:numbersSelectorColor="@color/black"
        android:contextClickable="true"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:backgroundTint="#006A67"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/alert_save" />

 <TextView
     android:id="@+id/tv_events_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAlignment="center"
     android:text="@string/upcoming_dates"
     android:textStyle="bold"
     android:textSize="22sp"/>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_calendar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:listitem="@layout/calendar_item"/>

</LinearLayout>